# linda-comm

./: .gitignore  CMakeLists.txt  README.md  file_exceptions.h  file_manager.cpp  file_manager.h  file_manager_exceptions.h  file_utils.cpp  file_utils.h  lambda_generator.cpp  lambda_generator.h  lexer.cpp  lexer.h  linda_base.h  linda_communicator.cpp  linda_communicator.h  linda_parser.cpp  linda_parser.h  linda_template.cpp  linda_template.h  linda_value.cpp  linda_value.h  main.cpp  makefile  parser.h  parser_exceptions.h  source.h  stringSource.cpp  stringSource.h  template_parser.cpp  template_parser.h  token.cpp  token.h  value_parser.cpp  value_parser.h
parser/: lambda_generator.cpp  lambda_generator.h  lexer.cpp  lexer.h  parser.h  parser_exceptions.h  template_parser.cpp  template_parser.h  value_parser.cpp  value_parser.h
tests/: read_concurrent.sh  read_interrupt.sh  read_random.sh  read_twice.sh  test_parser.sh  text  write_full.sh  wrong_lindas.sh
